Optimize jvm in docker