@@ -3,4 +3,4 @@ set -x
 gradle clean
 gradle bootJar
 cd build/libs
-java -Xms128m -Xmx256M -jar ./inline-0.1.jar $1
+java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -jar ./inline-0.1.jar $1
